--- a/NavLife/Bootstrap.html
+++ b/NavLife/Bootstrap.html
@@ -32,7 +32,7 @@
                         <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">Contact</a>
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li class="dropdown-header">Phone Number</li>
-                            <li><span class="dropdown-item-text">+40 0735 829 934</span></li>
+                            <li><span class="dropdown-item-text">+## ### ### ###</span></li>
                             <li class="dropdown-header">E-mail</li>
                             <li><span class="dropdown-item-text">gabriel.daniel2005@yahoo.com</span></li>
                             <li class="dropdown-header">G-mail</li>
